--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
     <item name="android:navigationBarColor">@color/navigationBarColor</item>
     <item name="android:windowBackground">@color/activityBackground</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="android:windowOptOutEdgeToEdgeEnforcement" tools:targetApi="35">true</item>
   </style>
   <style name="ResetEditText" parent="@android:style/Widget.EditText">
     <item name="android:padding">0dp</item>
